chore: add parser conformance tests for quoted map keys